# Redscript

./: .gitignore  CMakeLists.txt  README.md  build.sh  entry.cpp  out.rbc  rs.config
examples/: blocks.rsc  booleans.rsc  everything.rsc  fifs.rsc  file.rsc  hello.rsc  if.rsc  kill.rsc  library.rsc  modules.rsc  object.rsc  player.rsc  return.rsc  test.rsc  testrbc.rsc
examples/docs/: coming_soon.md  how.md  internals.md  loops.md  objects.md  rs_byte_code.md
examples/testing/: hello.rsc
examples/tutorials/: redscript_done_right.md
output/output/: output.mcfunction
output/output/datapacks/output/: pack.mcmeta
output/output/datapacks/output/data/redscript/function/: _do_stuff.mcfunction  output.mcfunction  return_if_even.mcfunction
output/test/: output.mcfunction
rs-highlight/: README.md  package.json  redscript-language-support-0.0.1.vsix
rs-highlight/syntaxes/: redscript.tmLanguage.json
rslib/: lang.rsc  math.rsc  player.rsc
src/: bst.hpp  config.cpp  config.hpp  constants.hpp  error.cpp  error.hpp  errors.hpp  file.cpp  file.hpp  globals.hpp  inb.cpp  inb.hpp  lang.cpp  lang.hpp  lexer.cpp  lexer.hpp  logger.hpp  mc.cpp  mc.hpp  mchelpers.hpp  rbc.cpp  rbc.hpp  token.hpp  util.hpp
